--- a/observability/observability-full-stack/.env.example
+++ b/observability/observability-full-stack/.env.example
@@ -1,43 +1,47 @@
-# Server Configuration - From GitLab Variables
-HOSTNAME=${HOSTNAME:-observability}
-RESTART_POLICY=${RESTART_POLICY:-unless-stopped}
+# Production Environment Configuration
+# This file uses GitLab CI/CD Variables for production deployment
 
-# Network Configuration - From GitLab Variables  
-VM_IP=${VM_IP:-192.168.80.25}
-DOMAIN_ADDRESS=${DOMAIN_ADDRESS:-monlog.erahyar.com}
-PROMETHEUS_SUB=${PROMETHEUS_SUB:-metrics}
-GRAFANA_SUB=${GRAFANA_SUB:-grafana}
-ALERTMANAGER_SUB=${ALERTMANAGER_SUB:-alerts}
-PUSHGATEWAY_SUB=${PUSHGATEWAY_SUB:-pushgw}
-LOKI_SUB=${LOKI_SUB:-loki}
+# Server Configuration
+HOSTNAME=observability-production
+RESTART_POLICY=unless-stopped
 
-# Docker image tags - Updated to latest production versions
-PROMETHEUS_TAG=${PROMETHEUS_TAG:-v3.4.1}
-GRAFANA_TAG=${GRAFANA_TAG:-12.3.2}
-ALERTMANAGER_TAG=${ALERTMANAGER_TAG:-v0.29.1}
-PUSHGATEWAY_TAG=${PUSHGATEWAY_TAG:-v1.12.0}
-CADVISOR_TAG=${CADVISOR_TAG:-v0.50.0}
-NODE_EXPORTER_TAG=${NODE_EXPORTER_TAG:-v1.10.1}
-BLACKBOX_TAG=${BLACKBOX_TAG:-v0.27.0}
-LOKI_TAG=${LOKI_TAG:-3.3.2}
-PROMTAIL_TAG=${PROMTAIL_TAG:-3.3.2}
-TEMPO_SUB=${TEMPO_SUB:-2.7.2}
-K6_TARCING_TAG=${K6_TARCING_TAG:-v0.0.8}
-MEMCACHED_TAG=${MEMCACHED_TAG:-1.6.38}
+# Network Configuration - From GitLab Variables
+VM_IP=VM_IP
+DOMAIN_ADDRESS=DOMAIN_ADDRESS
+PROMETHEUS_SUB=metrics
+GRAFANA_SUB=grafana
+ALERTMANAGER_SUB=alerts
+PUSHGATEWAY_SUB=pushgw
+LOKI_SUB=loki
 
-# Grafana Authentication - From GitLab Variables (SECURE_*)
-GRAFANA_USERNAME=${GRAFANA_USERNAME:-admin}
-GRAFANA_PASSWORD=${GRAFANA_PASSWORD:-secure_password_here}
-GRAFANA_INSTALL_PLUGINS=${GRAFANA_INSTALL_PLUGINS:-grafana-clock-panel,grafana-simple-json-datasource,grafana-piechart-panel}
+# tag image
+PROMETHEUS_TAG=v3.4.1
+GRAFANA_TAG=12.3.2
+ALERTMANAGER_TAG=v0.29.1
+PUSHGATEWAY_TAG=v1.12.0
+CADVISOR_TAG=v0.50.0
+NODE_EXPORTER_TAG=v1.10.1
+BLACKBOX_TAG=v0.27.0
+LOKI_TAG=3.3.2
+PROMTAIL_TAG=3.3.2
+TEMPO_SUB=2.7.2
+K6_TARCING_TAG=v0.0.8
+MEMCACHED_TAG=1.6.38
 
-# SSL Configuration - From GitLab Variables (SECURE_ACME_EMAIL)
-ACME_EMAIL=${ACME_EMAIL:-admin@erahyar.com}
+# Authentication - From GitLab Variables (Masked)
+GRAFANA_USERNAME=GRAFANA_USERNAME
+GRAFANA_PASSWORD=GRAFANA_PASSWORD
+GRAFANA_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource,grafana-piechart-panel
+VM_IP=VM_IP
+DOMAIN_ADDRESS=DOMAIN_ADDRESS
+# SSL Configuration - From GitLab Variables
+ACME_EMAIL=ACME_EMAIL
 
-# Web Authentication - From GitLab Variables (WEB_AUTH_*)
-# Generate password hash: echo your_password | htpasswd -s -n -i admin
-WEB_AUTH_USER=${WEB_AUTH_USER:-admin}
-WEB_AUTH_PASS=${WEB_AUTH_PASS:-{SHA}hashed_password_here}
+# Web Authentication - From GitLab Variables (Masked)
+# Password should be generated: echo your_password | htpasswd -s -n -i username
+WEB_AUTH_USER=WEB_AUTH_USER
+WEB_AUTH_PASS=WEB_AUTH_PASS
 
-# Slack Notifications - From GitLab Variables (SECURE_SLACK_WEBHOOK_URL)
-SLACK_WEBHOOK_URL=${SLACK_WEBHOOK_URL:-https://hooks.slack.com/services/YOUR/WEBHOOK/URL}
-SLACK_CHANNEL=${SLACK_CHANNEL:-#alerts}
+# Slack Notifications - From GitLab Variables (Masked)
+SLACK_WEBHOOK_URL=SLACK_WEBHOOK_URL
+SLACK_CHANNEL=#alerts
