--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,38 +1,26 @@
-# GitLab CI/CD Pipeline for Observability Stack
-# Simple deployment: pull code and restart containers
+# GitLab CI/CD Pipeline for Observability Stack  
+# Clean deployment: pull code and restart containers
 
 stages:
   - deploy
 
 variables:
   DOCKER_DRIVER: overlay2
-  DOCKER_IMAGE: docker:27.1.1-dind
-  REGISTRY_LOGIN: docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
 
-# GitLab CI/CD Variables configured:
-# PRODUCTION_VM_IP - Production server IP address (protected)
-# SSH_PRIVATE_KEY_RUNNER - SSH private key for server access (masked)
-# REGISTRY_LOGIN - Registry login command for authentication (masked)
-# PRODUCTION_DOMAIN - Production domain (protected/masked/expanded)
-# PRODUCTION_HOST - Production hostname (protected)
-# SECURE_GRAFANA_USERNAME - Grafana admin username (protected/masked)
-# SECURE_GRAFANA_PASSWORD - Grafana admin password (protected/masked)
-# SECURE_ACME_EMAIL - Email for SSL certificates (protected/masked/expanded)
-# WEB_AUTH_USER - Basic auth username (protected/masked/expanded)
-# WEB_AUTH_PASS - Basic auth password hash (protected/masked/expanded)
-# SECURE_SLACK_WEBHOOK_URL - Slack webhook for notifications (protected/masked)
+# GitLab CI/CD Variables needed:
+# PRODUCTION_VM_IP - Production server IP address
+# SSH_PRIVATE_KEY_RUNNER - SSH private key for server access
 
 default:
   image: alpine:latest
   before_script:
-    - apk add --no-cache openssh-client netcat-openbsd
+    - apk add --no-cache openssh-client
 
 deploy:production:
   stage: deploy
   script:
-    - echo "🚀 Simple deployment to production server..."
-    - echo "🔍 Debug - PRODUCTION_VM_IP = ${PRODUCTION_VM_IP}"
-    - export CI=true
+    - echo "🚀 Deploying to production server..."
+    - echo "🔍 Connecting to ${PRODUCTION_VM_IP}"
     - 'command -v ssh-agent >/dev/null || ( apk add --no-cache openssh-client )'
     - eval $(ssh-agent -s)
     - echo "$SSH_PRIVATE_KEY_RUNNER" | tr -d '\r' | ssh-add -
@@ -41,78 +29,45 @@ deploy:production:
     - |
       ssh -o StrictHostKeyChecking=no -p 8090 root@${PRODUCTION_VM_IP} "
         echo 'Starting deployment...' &&
+        
+        # Navigate to monitoring directory
         mkdir -p /opt/services/monitoring &&
         cd /opt/services/ &&
-        echo 'Checking git repository...' &&
-        if [ ! -d "monitoring/.git" ]; then
+        
+        # Clone or update repository
+        if [ ! -d 'monitoring/.git' ]; then
           echo 'Cloning repository...' &&
           git clone git@git.erahyar.com:rahyar/monitoring.git
-        fi &&
-        if [ -d "monitoring/.git" ]; then
+        else
           echo 'Updating repository...' &&
           cd monitoring &&
           git reset --hard &&
-          git pull --force
+          git pull --force &&
+          cd ..
         fi &&
-
-        echo '📁 Going to observability stack directory...' &&
-        cd observability/observability-full-stack &&
-        echo '📝 Generating environment file with sed...' &&
-        echo 'Debug: Checking GitLab variables:' &&
-        echo \"PRODUCTION_VM_IP = \$PRODUCTION_VM_IP\" &&
-        echo \"PRODUCTION_DOMAIN = \$PRODUCTION_DOMAIN\" &&
-        echo \"PRODUCTION_HOST = \$PRODUCTION_HOST\" &&
         
-        echo 'Setting fallback values for empty variables...' &&
-        VM_IP_VALUE=\${PRODUCTION_VM_IP:-192.168.80.25} &&
-        DOMAIN_VALUE=\${PRODUCTION_DOMAIN:-monlog.erahyar.com} &&
-        HOST_VALUE=\${PRODUCTION_HOST:-observability-production} &&
+        # Go to observability stack
+        cd monitoring/observability/observability-full-stack &&
         
-        echo \"Using values: VM_IP=\$VM_IP_VALUE, DOMAIN=\$DOMAIN_VALUE, HOST=\$HOST_VALUE\" &&
-        
+        # Create .env file and replace variables with sed
+        echo 'Creating .env file from template...' &&
         cp .env.example .env &&
-        echo 'Starting sed replacements...' &&
-        echo 'Setting up authentication variables with fallbacks...' &&
-        GRAFANA_USER_VALUE=\${SECURE_GRAFANA_USERNAME:-admin} &&
-        GRAFANA_PASS_VALUE=\${SECURE_GRAFANA_PASSWORD:-secure_password_here} &&
-        ACME_EMAIL_VALUE=\${SECURE_ACME_EMAIL:-admin@erahyar.com} &&
-        WEB_USER_VALUE=\${WEB_AUTH_USER:-admin} &&
-        WEB_PASS_VALUE=\${WEB_AUTH_PASS:-\\\$2y\\\$10\\\$defaulthash123456789012345678901} &&
-        SLACK_URL_VALUE=\${SECURE_SLACK_WEBHOOK_URL:-https://hooks.slack.com/services/DEFAULT/WEBHOOK/URL} &&
         
-        echo \"Debug - Final values:\" &&
-        echo \"GRAFANA_USER=\$GRAFANA_USER_VALUE\" &&
-        echo \"ACME_EMAIL=\$ACME_EMAIL_VALUE\" &&
-        echo \"WEB_USER=\$WEB_USER_VALUE\" &&
+        echo 'Replacing variables with GitLab CI values...' &&
+        sed -i \"s/^VM_IP=VM_IP\\\$/VM_IP=\${PRODUCTION_VM_IP}/g\" .env &&
+        sed -i \"s/^DOMAIN_ADDRESS=DOMAIN_ADDRESS\\\$/DOMAIN_ADDRESS=\${PRODUCTION_DOMAIN}/g\" .env &&
+        sed -i \"s/^GRAFANA_USERNAME=GRAFANA_USERNAME\\\$/GRAFANA_USERNAME=\${SECURE_GRAFANA_USERNAME}/g\" .env &&
+        sed -i \"s/^GRAFANA_PASSWORD=GRAFANA_PASSWORD\\\$/GRAFANA_PASSWORD=\${SECURE_GRAFANA_PASSWORD}/g\" .env &&
+        sed -i \"s/^ACME_EMAIL=ACME_EMAIL\\\$/ACME_EMAIL=\${SECURE_ACME_EMAIL}/g\" .env &&
+        sed -i \"s/^WEB_AUTH_USER=WEB_AUTH_USER\\\$/WEB_AUTH_USER=\${WEB_AUTH_USER}/g\" .env &&
+        sed -i \"s/^WEB_AUTH_PASS=WEB_AUTH_PASS\\\$/WEB_AUTH_PASS=\${WEB_AUTH_PASS}/g\" .env &&
+        sed -i \"s|^SLACK_WEBHOOK_URL=SLACK_WEBHOOK_URL\\\$|SLACK_WEBHOOK_URL=\${SECURE_SLACK_WEBHOOK_URL}|g\" .env &&
         
-        echo 'Replacing variables in .env file...' &&
-        sed -i \"s/^VM_IP=VM_IP\\\$/VM_IP=\$VM_IP_VALUE/g\" .env &&
-        sed -i \"s/^DOMAIN_ADDRESS=DOMAIN_ADDRESS\\\$/DOMAIN_ADDRESS=\$DOMAIN_VALUE/g\" .env &&
-        sed -i \"s/^HOSTNAME=observability-production\\\$/HOSTNAME=\$HOST_VALUE/g\" .env &&
-        sed -i \"s/^GRAFANA_USERNAME=GRAFANA_USERNAME\\\$/GRAFANA_USERNAME=\$GRAFANA_USER_VALUE/g\" .env &&
-        sed -i \"s/^GRAFANA_PASSWORD=GRAFANA_PASSWORD\\\$/GRAFANA_PASSWORD=\$GRAFANA_PASS_VALUE/g\" .env &&
-        sed -i \"s/^ACME_EMAIL=ACME_EMAIL\\\$/ACME_EMAIL=\$ACME_EMAIL_VALUE/g\" .env &&
-        sed -i \"s/^WEB_AUTH_USER=WEB_AUTH_USER\\\$/WEB_AUTH_USER=\$WEB_USER_VALUE/g\" .env &&
-        sed -i \"s/^WEB_AUTH_PASS=WEB_AUTH_PASS\\\$/WEB_AUTH_PASS=\$WEB_PASS_VALUE/g\" .env &&
-        sed -i \"s|^SLACK_WEBHOOK_URL=SLACK_WEBHOOK_URL\\\$|SLACK_WEBHOOK_URL=\$SLACK_URL_VALUE|g\" .env &&
+        echo 'Environment variables updated successfully!' &&
         
-        echo 'Verifying .env file after replacements...' &&
-        echo '=== .env content (first 20 lines) ===' &&
-        head -20 .env &&
-        echo '=== End of .env content ===' &&
-        
-        echo 'Checking for any remaining placeholder values...' &&
-        if grep -E '=(GRAFANA_USERNAME|GRAFANA_PASSWORD|VM_IP|DOMAIN_ADDRESS|ACME_EMAIL|WEB_AUTH_USER|WEB_AUTH_PASS|SLACK_WEBHOOK_URL)$' .env; then
-          echo 'WARNING: Found unreplaced placeholder values!' &&
-          exit 1
-        fi &&
-        echo 'All placeholder values successfully replaced!' &&
-        
-        echo 'Checking for undefined variables in compose files...' &&
-        docker-compose config --quiet || echo 'Warning: compose config check failed' &&
-        
+        # Restart containers
         echo '🐳 Restarting monitoring stack...' &&
-        docker-compose down &&
+        docker-compose down --remove-orphans &&
         docker-compose pull &&
         docker-compose up -d &&
         
