--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,16 +60,29 @@ deploy:production:
         echo \"SECURE_GRAFANA_USERNAME: '\${SECURE_GRAFANA_USERNAME}'\" &&
         echo \"WEB_AUTH_USER: '\${WEB_AUTH_USER}'\" &&
         
-        echo 'Replacing variables with GitLab CI values...' &&
-        sed -i \"s/^VM_IP=VM_IP\\\$/VM_IP=\${PRODUCTION_VM_IP}/g\" .env &&
-        sed -i \"s/^DOMAIN_ADDRESS=DOMAIN_ADDRESS\\\$/DOMAIN_ADDRESS=\${PRODUCTION_DOMAIN}/g\" .env &&
-        sed -i \"s/^HOSTNAME=observability-production\\\$/HOSTNAME=\${PRODUCTION_HOST}/g\" .env &&
-        sed -i \"s/^GRAFANA_USERNAME=GRAFANA_USERNAME\\\$/GRAFANA_USERNAME=\${SECURE_GRAFANA_USERNAME}/g\" .env &&
-        sed -i \"s/^GRAFANA_PASSWORD=GRAFANA_PASSWORD\\\$/GRAFANA_PASSWORD=\${SECURE_GRAFANA_PASSWORD}/g\" .env &&
-        sed -i \"s/^ACME_EMAIL=ACME_EMAIL\\\$/ACME_EMAIL=\${SECURE_ACME_EMAIL}/g\" .env &&
-        sed -i \"s/^WEB_AUTH_USER=WEB_AUTH_USER\\\$/WEB_AUTH_USER=\${WEB_AUTH_USER}/g\" .env &&
-        sed -i \"s/^WEB_AUTH_PASS=WEB_AUTH_PASS\\\$/WEB_AUTH_PASS=\${WEB_AUTH_PASS}/g\" .env &&
-        sed -i \"s|^SLACK_WEBHOOK_URL=SLACK_WEBHOOK_URL\\\$|SLACK_WEBHOOK_URL=\${SECURE_SLACK_WEBHOOK_URL}|g\" .env &&
+        echo 'Setting fallback values for empty variables...' &&
+        VM_IP_VAL=\${PRODUCTION_VM_IP:-192.168.80.25} &&
+        DOMAIN_VAL=\${PRODUCTION_DOMAIN:-monlog.erahyar.com} &&
+        HOST_VAL=\${PRODUCTION_HOST:-observability-production} &&
+        GRAFANA_USER_VAL=\${SECURE_GRAFANA_USERNAME:-admin} &&
+        GRAFANA_PASS_VAL=\${SECURE_GRAFANA_PASSWORD:-defaultpassword} &&
+        ACME_EMAIL_VAL=\${SECURE_ACME_EMAIL:-admin@erahyar.com} &&
+        WEB_USER_VAL=\${WEB_AUTH_USER:-admin} &&
+        WEB_PASS_VAL=\${WEB_AUTH_PASS:-defaultpass} &&
+        SLACK_URL_VAL=\${SECURE_SLACK_WEBHOOK_URL:-https://hooks.slack.com/services/DEFAULT/WEBHOOK} &&
+        
+        echo \"Using values: VM_IP=\$VM_IP_VAL, DOMAIN=\$DOMAIN_VAL, HOST=\$HOST_VAL\" &&
+        
+        echo 'Replacing variables with values (GitLab CI or fallbacks)...' &&
+        sed -i \"s/^VM_IP=VM_IP\\\$/VM_IP=\$VM_IP_VAL/g\" .env &&
+        sed -i \"s/^DOMAIN_ADDRESS=DOMAIN_ADDRESS\\\$/DOMAIN_ADDRESS=\$DOMAIN_VAL/g\" .env &&
+        sed -i \"s/^HOSTNAME=observability-production\\\$/HOSTNAME=\$HOST_VAL/g\" .env &&
+        sed -i \"s/^GRAFANA_USERNAME=GRAFANA_USERNAME\\\$/GRAFANA_USERNAME=\$GRAFANA_USER_VAL/g\" .env &&
+        sed -i \"s/^GRAFANA_PASSWORD=GRAFANA_PASSWORD\\\$/GRAFANA_PASSWORD=\$GRAFANA_PASS_VAL/g\" .env &&
+        sed -i \"s/^ACME_EMAIL=ACME_EMAIL\\\$/ACME_EMAIL=\$ACME_EMAIL_VAL/g\" .env &&
+        sed -i \"s/^WEB_AUTH_USER=WEB_AUTH_USER\\\$/WEB_AUTH_USER=\$WEB_USER_VAL/g\" .env &&
+        sed -i \"s/^WEB_AUTH_PASS=WEB_AUTH_PASS\\\$/WEB_AUTH_PASS=\$WEB_PASS_VAL/g\" .env &&
+        sed -i \"s|^SLACK_WEBHOOK_URL=SLACK_WEBHOOK_URL\\\$|SLACK_WEBHOOK_URL=\$SLACK_URL_VAL|g\" .env &&
         
         echo 'Checking .env file after sed replacements...' &&
         echo '=== Key variables in .env ===' &&
