--- a/observability/observability-full-stack/.env.example
+++ b/observability/observability-full-stack/.env.example
@@ -15,18 +15,18 @@ PUSHGATEWAY_SUB=pushgw
 LOKI_SUB=loki
 
 # tag image
-PROMETHEUS_TAG=v3.4.1
-GRAFANA_TAG=12.3.2
-ALERTMANAGER_TAG=v0.29.1
-PUSHGATEWAY_TAG=v1.12.0
-CADVISOR_TAG=v0.50.0
-NODE_EXPORTER_TAG=v1.10.1
-BLACKBOX_TAG=v0.27.0
-LOKI_TAG=3.3.2
-PROMTAIL_TAG=3.3.2
-TEMPO_SUB=2.7.2
-K6_TARCING_TAG=v0.0.8
-MEMCACHED_TAG=1.6.38
+PROMETHEUS_TAG=v3.4.1      
+GRAFANA_TAG=latest      
+ALERTMANAGER_TAG=v0.29.0   
+PUSHGATEWAY_TAG=v1.11.2
+CADVISOR_TAG=v0.47.0
+NODE_EXPORTER_TAG=v1.10.2  
+BLACKBOX_TAG=latest        
+LOKI_TAG=latest           
+PROMTAIL_TAG=latest        
+TEMPO_SUB=latest         
+K6_TRACING_TAG=latest      
+MEMCACHED_TAG=1.6.38  
 
 # Authentication - From GitLab Variables (Masked)
 GRAFANA_USERNAME=GRAFANA_USERNAME
