feat: Update observability stack configuration and dashboards
- Updated .env.example with new image tags for Grafana, Alertmanager, and other components.
- Modified compose.yml to include file_sd directory for Prometheus and updated Grafana environment variables.
- Changed dashboard folder name from 'MeCan_Services' to 'Rahyar_Services' in dashboard.yml.
- Added UID for Loki datasource in datasource.yml.
- Enhanced prometheus.yml with dynamic target discovery using file_sd configs.
- Improved promtail.yml with additional labels and pipeline stages for log processing.
- Created README.md for the observability stack with setup instructions and Ansible deployment details.
- Added inventory.yml for Ansible with monitoring target configurations.
- Specified required Ansible collections in requirements.yml.
- Defined default variables for monitoring stack in main.yml.
- Implemented handlers for Prometheus reload and Git integration in handlers.yml.
- Developed tasks for deploying monitoring stack in tasks.yml.
- Created templates for compose.yml and Prometheus file_sd JSON.
- Added sample compose.yml and promtail.yml for reference.
- Introduced new dashboards for application overview, edge uptime, and PHP-FPM health.
- Updated README.md in file_sd directory with usage instructions.
- Added .gitkeep.json to maintain directory structure for file_sd targets.

--- a/observability/observability-full-stack/.env.example
+++ b/observability/observability-full-stack/.env.example
@@ -15,23 +15,27 @@ PUSHGATEWAY_SUB=pushgw
 LOKI_SUB=loki
 
 # tag image
-PROMETHEUS_TAG=v3.4.1      
-GRAFANA_TAG=latest      
-ALERTMANAGER_TAG=v0.29.0   
-PUSHGATEWAY_TAG=v1.11.2
-CADVISOR_TAG=v0.47.0
-NODE_EXPORTER_TAG=v1.10.2  
-BLACKBOX_TAG=latest        
-LOKI_TAG=latest           
-PROMTAIL_TAG=latest        
-TEMPO_SUB=latest         
-K6_TRACING_TAG=latest      
-MEMCACHED_TAG=1.6.38  
+PROMETHEUS_TAG=v3.4.1
+GRAFANA_TAG=12.3.2
+ALERTMANAGER_TAG=v0.29.1
+PUSHGATEWAY_TAG=v1.12.0
+CADVISOR_TAG=v0.50.0
+NODE_EXPORTER_TAG=v1.10.1
+BLACKBOX_TAG=v0.27.0
+LOKI_TAG=3.3.2
+PROMTAIL_TAG=3.3.2
+TEMPO_SUB=2.7.2
+MEMCACHED_TAG=1.6.38
 
 # Authentication - From GitLab Variables (Masked)
 GRAFANA_USERNAME=GRAFANA_USERNAME
 GRAFANA_PASSWORD=GRAFANA_PASSWORD
-GRAFANA_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource,grafana-piechart-panel
+# Recommended, signed Grafana plugins (safe defaults)
+# You can pin versions with @x.y.z, e.g. yesoreyeram-infinity-datasource@2.6.5
+GRAFANA_INSTALL_PLUGINS=yesoreyeram-infinity-datasource,marcusolsson-json-datasource,volkovlabs-echarts-panel,natel-plotly-panel,marcusolsson-dynamictext-panel,grafana-polystat-panel
+## If you need to allow specific unsigned plugins, list IDs here (comma-separated)
+## Example: grafana-exploretraces-app
+GRAFANA_UNSIGNED_PLUGINS=
 
 # SSL Configuration - From GitLab Variables
 ACME_EMAIL=ACME_EMAIL
