--- a/observability/observability-full-stack/compose.yml
+++ b/observability/observability-full-stack/compose.yml
@@ -28,6 +28,7 @@ services:
     volumes:
       - prometheus_data:/prometheus
       - ./prometheus:/etc/prometheus
+      - ./prometheus/file_sd:/etc/prometheus/file_sd:ro
     command:
       - --config.file=/etc/prometheus/prometheus.yml
       - --storage.tsdb.path=/prometheus
@@ -51,7 +52,7 @@ services:
       - GF_SECURITY_ADMIN_USER=${GRAFANA_USERNAME}
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
       - GF_INSTALL_PLUGINS=${GRAFANA_INSTALL_PLUGINS}
-      - GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=grafana-exploretraces-app
+      - GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=${GRAFANA_UNSIGNED_PLUGINS}
       - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
       - GF_PATHS_DATA=/var/lib/grafana
       - GF_USERS_DEFAULT_THEME=light
