--- a/observability/observability-full-stack/grafana/dashboards/dashboard.yml
+++ b/observability/observability-full-stack/grafana/dashboards/dashboard.yml
@@ -3,7 +3,7 @@ apiVersion: 1
 providers:
 - name: 'Prometheus'
   orgId: 1
-  folder: 'MeCan_Services'
+  folder: 'Rahyar_Services'
   type: file
   disableDeletion: false
   editable: true
