--- a/observability/observability-full-stack/prometheus/prometheus.yml
+++ b/observability/observability-full-stack/prometheus/prometheus.yml
@@ -85,3 +85,19 @@ scrape_configs:
   - job_name: 'loki'
     static_configs:
       - targets: [ 'loki:3100' ]
+
+  # Dynamic target discovery from Ansible-generated file_sd configs
+  - job_name: 'remote-nodes'
+    file_sd_configs:
+      - files:
+          - '/etc/prometheus/file_sd/targets/*.json'
+        refresh_interval: 30s
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [job]
+        target_label: job
+      - source_labels: [host]
+        target_label: host
+      - source_labels: [instance]
+        target_label: instance
