--- a/observability/observability-full-stack/promtail/promtail.yml
+++ b/observability/observability-full-stack/promtail/promtail.yml
@@ -15,12 +15,20 @@ scrape_configs:
       - localhost
     labels:
       job: varlogs
+      host: observability-stack
+      instance: observability-stack
       __path__: /var/log/*.log
 
 - job_name: container
   docker_sd_configs:
   - host: unix:///var/run/docker.sock
     refresh_interval: 5s
+  static_configs:
+  - targets:
+      - localhost
+    labels:
+      host: observability-stack
+      instance: observability-stack
   relabel_configs:
   - source_labels: ['__meta_docker_container_name']
     regex: '/(.*)'
@@ -29,3 +37,31 @@ scrape_configs:
     target_label: 'logstream'
   - source_labels: ['__meta_docker_container_label_logging_jobname']
     target_label: 'job'
+  pipeline_stages:
+  - json:
+      expressions:
+        level: level
+        timestamp: time
+        message: msg
+  - timestamp:
+      source: timestamp
+      format: RFC3339Nano
+  - labels:
+      level:
+  - drop:
+      source: level
+      expression: "debug"
+  - match:
+      selector: '{container="prometheus"}'
+      stages:
+      - regex:
+          expression: 'level=(?P<level>\\w+)'
+      - labels:
+          level:
+  - match:
+      selector: '{container="grafana"}'
+      stages:
+      - regex:
+          expression: 'lvl=(?P<level>\\w+)'
+      - labels:
+          level:
