--- a/observability/observability-full-stack/prometheus/prometheus.yml
+++ b/observability/observability-full-stack/prometheus/prometheus.yml
@@ -22,6 +22,10 @@ scrape_configs:
   - job_name: 'cadvisor'
     static_configs:
       - targets: ['cadvisor:8080']
+  
+  - job_name: 'cadvisor'
+    static_configs:
+      - targets: ['192.168.80.53:18080']    
 
   - job_name: 'node-exporter'
     static_configs:
@@ -85,7 +89,11 @@ scrape_configs:
   - job_name: 'loki'
     static_configs:
       - targets: [ 'loki:3100' ]
-
+  - job_name: 'rahyar-stage'  # مثال: remote-node-exporter-server1
+    static_configs:
+      - targets: ['192.168.80.53:19100']
+        labels:
+          server: rahyar-stage
   # Dynamic target discovery from Ansible-generated file_sd configs
   - job_name: 'remote-nodes'
     file_sd_configs:
