--- a/observability/observability-full-stack/prometheus/prometheus.yml
+++ b/observability/observability-full-stack/prometheus/prometheus.yml
@@ -22,10 +22,6 @@ scrape_configs:
   - job_name: 'cadvisor'
     static_configs:
       - targets: ['cadvisor:8080']
-  
-  - job_name: 'cadvisor'
-    static_configs:
-      - targets: ['192.168.80.53:18080']    
 
   - job_name: 'node-exporter'
     static_configs:
@@ -89,23 +85,11 @@ scrape_configs:
   - job_name: 'loki'
     static_configs:
       - targets: [ 'loki:3100' ]
-  - job_name: 'rahyar-stage'  # مثال: remote-node-exporter-server1
+  
+  - job_name: 'remote-node-exporter'
     static_configs:
       - targets: ['192.168.80.53:19100']
-        labels:
-          server: rahyar-stage
-  # Dynamic target discovery from Ansible-generated file_sd configs
-  - job_name: 'remote-nodes'
-    file_sd_configs:
-      - files:
-          - '/etc/prometheus/file_sd/targets/*.json'
-        refresh_interval: 30s
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [job]
-        target_label: job
-      - source_labels: [host]
-        target_label: host
-      - source_labels: [instance]
-        target_label: instance
+
+  - job_name: 'remote-cadvisor'
+    static_configs:
+      - targets: ['192.168.80.53:18080']    
