fix: update job names for rahyar-stage in Prometheus configuration

--- a/observability/observability-full-stack/prometheus/prometheus.yml
+++ b/observability/observability-full-stack/prometheus/prometheus.yml
@@ -86,10 +86,10 @@ scrape_configs:
     static_configs:
       - targets: [ 'loki:3100' ]
   
-  - job_name: 'remote-node-exporter'
+  - job_name: 'rahyar-stage'
     static_configs:
       - targets: ['192.168.80.53:19100']
 
-  - job_name: 'remote-cadvisor'
+  - job_name: 'rahyar-stage'
     static_configs:
       - targets: ['192.168.80.53:18080']    
