--- a/observability/observability-full-stack/prometheus/prometheus.yml
+++ b/observability/observability-full-stack/prometheus/prometheus.yml
@@ -84,15 +84,12 @@ scrape_configs:
 
   - job_name: 'loki'
     static_configs:
-      - targets: [ 'loki:3100' ]
-
-  - job_name: 'host-node-exporter'
-    static_configs:
-      - targets: ['192.168.80.53:9100']
+      - targets: [ '192.168.80.53:3100' ]
         labels:
           server: rahyar-stage
-          type: host
+          type: service
 
+  
   - job_name: 'remote-node-exporter'
     static_configs:
       - targets: ['192.168.80.53:19100']
