fix: update remote node exporter and add remote traefik job configuration in Prometheus

--- a/observability/observability-full-stack/prometheus/prometheus.yml
+++ b/observability/observability-full-stack/prometheus/prometheus.yml
@@ -89,7 +89,6 @@ scrape_configs:
           server: rahyar-stage
           type: service
 
-  
   - job_name: 'remote-node-exporter'
     static_configs:
       - targets: ['192.168.80.53:19100']
@@ -103,3 +102,11 @@ scrape_configs:
         labels:
           server: rahyar-stage
           type: container
+
+  - job_name: 'remote-traefik'
+    metrics_path: '/metrics'
+    static_configs:
+      - targets: ['192.168.80.54:8082']
+        labels:
+          server: traefik-server
+          type: service
